k8s/linkerd/ingress/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-demo-7
  labels:
  labels:
    app: go-demo-7
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: go-demo-7
          servicePort: 80
    host: go-demo-7.acme.com
